--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,4 +2,4 @@ build:
 	pdflatex main.tex
 
 clean:
-	rm -f *.aux *.log *.out *.toc *.fls *.fdb_latexmk *.bcf *.blg *.bbl *.maf *.mtc* *.xml *.synctex.gz
+	rm -f *.aux *.log *.out *.toc *.fls *.fdb_latexmk *.bcf *.blg *.bbl *.maf *.mtc* *.xml *.synctex.gz *.pdf
