--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,5 +1,7 @@
 build:
 	pdflatex main.tex
+	biber main
+	pdflatex main.tex
 
 clean:
 	rm -f *.aux *.log *.out *.toc *.fls *.fdb_latexmk *.bcf *.blg *.bbl *.maf *.mtc* *.xml *.synctex.gz *.pdf
